# archwiki

./: README.md  README.rst  pyproject.toml
archwiki/: .swp  archwiki.py
