[tool.poetry]
name = "archwiki"
version = "0.3.0"
description = "Explore e salve tópicos da biblioteca do ArchLinux"
authors = ["renantamashiro"]

[tool.poetry.scripts]
archwiki = 'archwiki.archwiki:run'

[tool.poetry.dependencies]
python = "^3.8"
html2text = "^2020.1.16"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
